--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,12 @@ pipeline{
     stages{
         stage("checkout"){
             steps{
-                echo "========checkout url of project========"
-                git url:"https://github.com/iamsumitkumar10/pipeline-demo.git"
+                script {
+                    git url:"https://github.com/iamsumitkumar10/pipeline-demo.git",branch:"main"
+                    echo "========checkout url of project========"
+                }
+                
+                
             }
         }
 
