--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,5 @@
-pipeline{
+
+pipeline {
     agent any
     tools{
         tool:'NodeJs'
@@ -7,51 +8,51 @@ pipeline{
     environment {
         NODE_VERSION = "18"
     }
-    stages{
-        stage("checkout"){
-            steps{
+
+    stages {
+        stage('Git Checkout') {
+            steps {
                 script {
+                    
                     git url:"https://github.com/iamsumitkumar10/pipeline-demo.git",branch:"main"
-                    echo "========checkout url of project========"
                 }
-                
-                
+            }
+        }
+        
+        stage('Install Dependencies') {
+            steps {
+                script {
+                    echo "Installing dependencies..."
+                    sh 'npm install'
+                }
+            }
+        }
+        stage('run project') {
+            steps {
+                script {
+                    echo "Running project..."
+                    sh "npm run dev"
+                }
             }
         }
 
-        stage("dependencies install"){
-            steps{
-                echo "=====npm insatll======="
-                sh 'npm install'
+        stage('Build Project') {
+            steps {
+                script {
+                    echo "Building project..."
+                    sh 'npm run build'
+                }
             }
         }
 
-        stage("run project"){
-            steps{
-                echo "running project url here "
-                sh 'npm run dev'
-            }
-        }
+    }
 
-        stage("project build here"){
-            steps{
-                echo "project build "
-                sh 'npm run build'
-            }
+    post {
+        success {
+            echo "Deployment successful!"
         }
-    }    
-
-
-
-    post{
-        always{
-            echo "========default always========"
-        }
-        success{
-            echo "========successfully ========"
-        }
-        failure{
-            echo "======== failed========"
+        failure {
+            echo "Deployment failed!"
         }
     }
 }
